--- a/songs/index.html
+++ b/songs/index.html
@@ -77,10 +77,14 @@ img {
 	
 <img src="images/songs page 4.png" class="logo">
 	
+<p class="body"><a href="https://www.tomspage.org">pictures</a> • <a href="https://www.tomspage.org/videos">videos</a> • <a href="https://www.tomspage.org/songs">songs</a> • <a href="https://www.tomspage.org/anagrams"</a>text<p/>
+<p class="body">by Tom</p>
+
 <p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
-<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
+	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
+	  <input type="email" name="_replyto">
+	  <input type="submit" value="Send">
+	</form>
 
 <p class="body"><a href="https://www.tomspage.org">Back to Tom's Page</a></p>
   
