--- a/songs/index.html
+++ b/songs/index.html
@@ -27,11 +27,12 @@
 }
 .body {
 	font-size: 14pt;
-	font-family: garamond;
+	font-family: Trebuchet MS;
 	font-style: italic;
 	color: #362000;
 	text-align: center;
-	margin-top: 0;	
+	margin-top: 0;
+	margin-bottom: 1px;
 }	
 img {
 	width: 100%;
@@ -68,10 +69,10 @@ img {
 	
 <img src="images/songs page 4.png" class="logo">
 	
-<p class="body"><a href="https://www.tomspage.org">pictures</a> • <a href="https://www.tomspage.org/videos">videos</a> • <a href="https://www.tomspage.org/songs">songs</a> • <a href="https://www.tomspage.org/anagrams"</a>text<p/>
+<p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a><p/>
 <p class="body">by Tom</p>
 
-<p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
+<p class="body">Submit your email address to join the mailing list:</p>
 	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
 	  <input type="email" name="_replyto">
 	  <input type="submit" value="Send">
