--- a/songs/index.html
+++ b/songs/index.html
@@ -8,32 +8,13 @@
 </TITLE>
   
 <style>
-  body {
+body {
 	text-align: center;
 	width: 600px;
 	margin: auto;
 	background-color: #f2f2f7;
   	line-height: 1.1;
 }
-.title {
-	font-size: 16pt;
-	font-family: garamond;
-	font-weight: bold;
-	font-style: italic;
-	color: #362000;
-	text-align: center;
-	margin-top: 20px;
-	margin-bottom: 1px;
-}
-.body {
-	font-size: 14pt;
-	font-family: Trebuchet MS;
-	font-style: italic;
-	color: #362000;
-	text-align: center;
-	margin-top: 0;
-	margin-bottom: 1px;
-}	
 img {
 	width: 100%;
 	height: auto;
@@ -49,15 +30,25 @@ img {
 	margin-bottom: 35px;
 	box-shadow: none;
 }
-	.logo {
-	display: block;
- 	margin-left: auto;
-  	margin-right: auto;
-     	width: 37%;
-	height: auto;
-	margin-bottom: 35px;
-	box-shadow: none;
+.title {
+	font-size: 16pt;
+	font-family: garamond;
+	font-weight: bold;
+	font-style: italic;
+	color: #362000;
+	text-align: center;
+	margin-top: 20px;
+	margin-bottom: 1px;
 }
+.body {
+	font-size: 12pt;
+	font-family: Trebuchet MS;
+	font-style: italic;
+	color: #362000;
+	text-align: center;
+	margin-top: 0;
+	margin-bottom: 1px;
+}	
 </style>	
 </head>		
   
@@ -72,7 +63,7 @@ img {
 <p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a><p/>
 <p class="body">by Tom</p>
 
-<p class="body">Submit your email address to join the mailing list:</p>
+<p class="title">Submit your email address to join the mailing list:</p>
 	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
 	  <input type="email" name="_replyto">
 	  <input type="submit" value="Send">
