--- a/songs/index.html
+++ b/songs/index.html
@@ -42,7 +42,7 @@ img {
 }
 .body {
 	font-size: 12pt;
-	font-family: Trebuchet MS;
+	font-family: garamond;
 	font-style: italic;
 	color: #362000;
 	text-align: center;
