--- a/songs/index.html
+++ b/songs/index.html
@@ -59,7 +59,7 @@ img {
 	
 <img src="images/songs page 4.png" class="logo">
 	
-<p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a><p/>
+<p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a></p>
 <p class="body">by Tom</p>
 
 <p class="body">Submit your email address to join the mailing list:</p>
