--- a/songs/index.html
+++ b/songs/index.html
@@ -41,7 +41,7 @@ img {
 	margin-bottom: 1px;
 }
 .body {
-	font-size: 12pt;
+	font-size: 14pt;
 	font-family: garamond;
 	font-style: italic;
 	color: #362000;
@@ -62,7 +62,7 @@ img {
 <p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a></p>
 <p class="body">by Tom</p>
 
-<p class="body">Submit your email address to join the mailing list:</p>
+<p font-family: Trebuchet MS; font-style: italic>Submit your email address to join the mailing list:</p>
 	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
 	  <input type="email" name="_replyto">
 	  <input type="submit" value="Send">
