--- a/songs/index.html
+++ b/songs/index.html
@@ -27,7 +27,7 @@ img {
   	margin-right: auto;
      	width: 37%;
 	height: auto;
-	margin-bottom: 35px;
+	margin-bottom: 5px;
 	box-shadow: none;
 }
 .title {
@@ -41,8 +41,8 @@ img {
 	margin-bottom: 1px;
 }
 .body {
-	font-size: 14pt;
-	font-family: garamond;
+	font-size: 12pt;
+	font-family: trebuchet MS;
 	font-style: italic;
 	color: #362000;
 	text-align: center;
@@ -62,7 +62,7 @@ img {
 <p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a></p>
 <p class="body">by Tom</p>
 
-<p style="font-size: 14pt; font-family: Trebuchet MS; font-style: italic">Submit your email address to join the mailing list:</p>
+<p style="font-size: 12pt; font-family: Trebuchet MS; font-style: italic">Submit your email address to join the mailing list:</p>
 	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
 	  <input type="email" name="_replyto">
 	  <input type="submit" value="Send">
