--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ img {
 	margin-bottom: 32px;
 	box-shadow: 0px 2px 5px 0px #696969;
 }
-	.logo {
+.logo {
 	display: block;
  	margin-left: auto;
   	margin-right: auto;
@@ -24,6 +24,28 @@ img {
 	height: auto;
 	margin-bottom: 35px;
 	box-shadow: none;
+}
+.body {
+	font-size: 12pt;
+	font-family: garamond;
+	font-style: italic;
+	color: #362000;
+	text-align: center;
+	margin: 1px;
+}		
+.header {
+	font-size: 14pt;
+	font-family:garamond;
+	color:gray;
+	text-align: center;
+}
+.title {
+	font-size: 12pt;
+	font-family:Trebuchet MS;
+	color: #362000;
+	text-align: center;
+	margin-top: 12px;
+	margin-bottom: 17px;
 }
 </style>	
 </head>
@@ -33,6 +55,9 @@ img {
 <TITLE>
     Tom's Page
 </TITLE>
+	
+<p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a></p>
+<p class="body">by Tom</p>
 	
 	<br>
 	<br>
@@ -50,44 +75,82 @@ img {
 </br>
 </br>
 </br>
+
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
+
 <img src="images/midst of deliverance ix.jpg" title="June 26, 2021">
+
 <img src="images/what if 6.5.21, or, midst of deliverance viii.jpg" title="June 5, 2021">
+
 <img src="images/midst of deliverance vii.jpg" title="May 16, 2021">
+
 <img src="images/midst of deliverance vi.jpg" title="March 28, 2021">
+
 <img src="images/midst of deliverance v.jpg" title="February 6, 2021">
+
 <img src="images/portrait of the artist 1.28.21.jpg" title="January 28, 2021">
+
 <img src="images/rain song iv.jpg" title="December 28, 2020">
+
 <img src="images/camelot.jpg" title="November 25, 2020">
+
 <img src="images/on being alone 3ish, or, portrait of the artist 10.18.20.jpg" title="October 18, 2020">
+
 <img src="images/10.03.20, or, variation on a theme.jpg" title="October 4, 2020">
+
 <img src="images/rain song iii.jpg" title="September 27, 2020">
+
 <img src="images/in the desert ii.jpg" title="August 25, 2020">
+
 <img src="images/viewing 8.9.20.jpg" title="August 9, 2020">
+
 <img src="images/rain song ii.jpg" title="August 2, 2020">
+
 <img src="images/still life 7.18.20.jpg" title="July 18, 2020">
+
 <img src="images/in flight 7.12.20.jpg" title="July 12, 2020">
+
 <img src="images/on sisyphus (midst of deliverance iv).jpg" title="May 31, 2020">
+
 <img src="images/try 2 hang on.jpg" title="May 23, 2020">
+
 <a href="https://www.youtube.com/watch?v=jHNqs3IYvG0" target="_blank"><img src="images/on being alone.jpg" title="April 22, 2020"></a>
+
 <img src="images/4.5.20.jpg" title="April 5, 2020">
+
 <img src="images/remember how to do this.jpg" title="April 4, 2020">
+
 <img src="images/rain song (midst of deliverance iii).jpg" title="April 3, 2020">
+
 <img src="images/midst of deliverance ii.jpg" title="March 23, 2020">
+
 <img src="images/until my protector comes (portrait of the artist 3.16.20).jpg" title="March 16, 2020">
+
 <img src="images/hot tip 19.jpg" title="March 8, 2020">
+
 <img src="images/next thing on my checklist.jpg" title="February 23, 2020">
+
 <a href="https://www.youtube.com/watch?v=Qr5YPpOV94M" target="_blank"><img src="images/portrait of the artist 2.16.20.jpg" title="February 16, 2020"></a>
+
 <a href="https://en.wikipedia.org/wiki/Stars_(M._C._Escher)" target="_blank"><img src="images/etsch.jpg" title="February 9, 2020"></a>
+
 <img src="images/pennsylvania polka.jpg" title="February 2, 2020">
+
 <img src="images/iii guesses.jpg" title="January 26, 2020">
+
 <img src="images/in flight.jpg" title="January 19, 2020">
+
 <a href="https://www.tomspage.org/images/blackstars.jpg" target="_blank"><img src="images/blackstars 2020.jpg" title="January 11, 2020"></a>
+
 <img src="images/wild%2C or%2C portrait of the artist 1.4.20%2C or%2C high in the custerdome.jpg" title="January 4, 2020">
+
 <img src="images/Qn 12.28.19.jpg" title="December 28, 2019">
+
 <a href="https://youtu.be/NUnXxh5U25Y?t=201" target="_blank"><img src="images/falling 12.21.19.jpg" title="December 21, 2019"></a>
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    November 2019    ––––</br>
+
+
+<p class="header">––––    November 2019    ––––</p></br>
 <a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></i></p>
 
 <img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019 | AMENDMENT I: Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.">
