--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@ img {
 </br>
 </br>
 
+<p class="title">"in the desert iii (portait of the artist 7.7.21"</p>
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
 
+<p class="title">"midst of deliverance ix.jpg"</p>
 <img src="images/midst of deliverance ix.jpg" title="June 26, 2021">
 
 <img src="images/what if 6.5.21, or, midst of deliverance viii.jpg" title="June 5, 2021">
