--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ img {
 	box-shadow: none;
 }
 .body {
-	font-size: 14pt;
+	font-size: 15pt;
 	font-family: garamond;
 	font-style: italic;
 	color: #362000;
@@ -62,7 +62,7 @@ img {
 	
 <img src="images/tomspage.png" class="logo">
 	
-<p class="body"><a href="https://www.tomspage.org">pictures</a>  •  <a href="https://www.tomspage.org/videos">videos</a>  •  <a href="https://www.tomspage.org/songs">songs</a>  •  <a href="https://www.tomspage.org/anagrams">text</a></p>
+<p class="body"><a href="https://www.tomspage.org"><b>pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></b></p>
 <p class="body">by Tom</p>
 	
 <p style="font-family:Trebuchet MS;"><i>Submit your email address to join the mailing list:</i></p>
