--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@ body {
 img {
 	width: 93%;
 	height: auto;
-	margin-bottom: 32px;
 	box-shadow: 0px 2px 5px 0px #696969;
 }
 .logo {
@@ -45,7 +44,7 @@ img {
 	color: #362000;
 	text-align: center;
 	margin-top: 12px;
-	margin-bottom: 17px;
+	margin-bottom: 32px;
 }
 </style>	
 </head>
@@ -76,21 +75,23 @@ img {
 </br>
 </br>
 
-<p class="title">"in the desert iii (portait of the artist 7.7.21"</p>
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
+<p class="title">"in the desert iii (portait of the artist 7.7.21"</p>
 
-<p class="title">"midst of deliverance ix.jpg"</p>
-<img src="images/midst of deliverance ix.jpg" title="June 26, 2021">
-
-<img src="images/what if 6.5.21, or, midst of deliverance viii.jpg" title="June 5, 2021">
+<img src="images/midst of deliverance viii.jpg" title="June 26, 2021">
+<p class="title">"midst of deliverance viii.jpg"</p>
 
 <img src="images/midst of deliverance vii.jpg" title="May 16, 2021">
+<p class="title">"midst of deliverance vii.jpg"</p>
 
 <img src="images/midst of deliverance vi.jpg" title="March 28, 2021">
+<p class="title">"midst of deliverance vi.jpg"</p>
 
 <img src="images/midst of deliverance v.jpg" title="February 6, 2021">
+<p class="title">"midst of deliverance vi.jpg"</p>
 
 <img src="images/portrait of the artist 1.28.21.jpg" title="January 28, 2021">
+<p class="title">"portrait of the artist 1.28.21.jpg"</p>
 
 <img src="images/rain song iv.jpg" title="December 28, 2020">
 
