--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@ img {
 	box-shadow: none;
 }
 .body {
-	font-size: 15pt;
-	font-family: garamond;
+	font-size: 12pt;
+	font-family: trebuchet MS;
 	font-style: italic;
 	color: #362000;
 	text-align: center;
