--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ img {
 <img src="images/midst of deliverance ix.jpg" title="June 26, 2021">
 <p class="title">"midst of deliverance ix.jpg"</p>
 
-<img src="images/midst of deliverance viii.jpg" title="May 16, 2021">
-<p class="title">"midst of deliverance viii.jpg"</p>
+<img src="images/midst of deliverance vii.jpg" title="May 16, 2021">
+<p class="title">"midst of deliverance vii.jpg"</p>
 
 <img src="images/midst of deliverance vi.jpg" title="March 28, 2021">
 <p class="title">"midst of deliverance vi.jpg"</p>
