--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ img {
 	font-style: italic;
 	color: #362000;
 	text-align: center;
-	margin: 1px;
+	margin: 5px;
 }		
 .header {
 	font-size: 14pt;
@@ -43,7 +43,7 @@ img {
 	font-family:Trebuchet MS;
 	color: #362000;
 	text-align: center;
-	margin-top: 6px;
+	margin-top: 8px;
 	margin-bottom: 50px;
 }
 </style>	 
@@ -76,6 +76,9 @@ img {
 </br>
 </br>
 </br>
+
+<p class="body">Submit your email address to join the mailing list:</p>
+
 
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
 <p class="title">"in the desert iii (portait of the artist 7.7.21"</p>
