--- a/index.html
+++ b/index.html
@@ -69,16 +69,20 @@ img {
 <p class="body">Submit your email address to join the mailing list:</p>
 
 <form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-  <input type="email" name="_replyto">
-  <input type="submit" value="Send">
+	<input type="email" name="_replyto">
+  	<input type="submit" value="Send">
 </form>
-</html>
-</br>
-</br>
-</br>
 
-<p class="body">Submit your email address to join the mailing list:</p>
+	<br>
 
+<p class="body">Special series:</p>
+	<p class="body"><a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></p>
+	<p class="body"><a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a></p>
+	<p class="body"><a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a></p>
+
+	<br>
+	<br>
+	<br>
 
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
 <p class="title">"in the desert iii (portait of the artist 7.7.21"</p>
