--- a/index.html
+++ b/index.html
@@ -74,8 +74,10 @@ img {
 </form>
 
 	<br>
+	<br>
+	<br>
 
-<p class="body">Special series:</p>
+<p class="body" style="font-style:normal">Special series:</p>
 	<p class="body"><a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></p>
 	<p class="body"><a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a></p>
 	<p class="body"><a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a></p>
@@ -83,30 +85,34 @@ img {
 	<br>
 	<br>
 	<br>
+	<br>
 
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
-<p class="title">"in the desert iii (portait of the artist 7.7.21"</p>
+	<p class="title">"in the desert iii (portait of the artist 7.7.21"</p>
 
 <img src="images/midst of deliverance ix.jpg" title="June 26, 2021">
-<p class="title">"midst of deliverance ix.jpg"</p>
+	<p class="title">"midst of deliverance ix.jpg"</p>
 
 <img src="images/midst of deliverance vii.jpg" title="May 16, 2021">
-<p class="title">"midst of deliverance vii.jpg"</p>
+	<p class="title">"midst of deliverance vii.jpg"</p>
 
 <img src="images/midst of deliverance vi.jpg" title="March 28, 2021">
-<p class="title">"midst of deliverance vi.jpg"</p>
+	<p class="title">"midst of deliverance vi.jpg"</p>
 
 <img src="images/midst of deliverance v.jpg" title="February 6, 2021">
-<p class="title">"midst of deliverance vi.jpg"</p>
+	<p class="title">"midst of deliverance vi.jpg"</p>
 
 <img src="images/portrait of the artist 1.28.21.jpg" title="January 28, 2021">
-<p class="title">"portrait of the artist 1.28.21.jpg"</p>
+	<p class="title">"portrait of the artist 1.28.21.jpg"</p>
 
 <img src="images/rain song iv.jpg" title="December 28, 2020">
+	<p class="title">"rain song iv.jpg"</p>
 
 <img src="images/camelot.jpg" title="November 25, 2020">
+	<p class="title">"camelot.jpg"</p>
 
 <img src="images/on being alone 3ish, or, portrait of the artist 10.18.20.jpg" title="October 18, 2020">
+	<p class="title">"on being alone 3ish, or, portrait of the artist 10.18.20.jpg"</p>
 
 <img src="images/10.03.20, or, variation on a theme.jpg" title="October 4, 2020">
 
