--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ img {
 	<br>
 	<br>
 
-<p class="body">Special series:</p>
+<p class="body">Super special series:</p>
 	<p class="body" style="font-style:normal"><a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></p>
 	<p class="body" style="font-style:normal"><a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a></p>
 	<p cclass="body" style="font-style:normal"><a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a></p>
