--- a/index.html
+++ b/index.html
@@ -65,22 +65,21 @@ img {
 <p class="body">by Tom</p>
 	
 	<br>
-	
-<p class="body">Submit your email address to join the mailing list:</p>
-
-<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
-	<input type="email" name="_replyto">
-  	<input type="submit" value="Send">
-</form>
-
-	<br>
-	<br>
 	<br>
 
 <p class="body">Super special series:</p>
+	<p class="body" style="font-style:normal"><a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a></p>
 	<p class="body" style="font-style:normal"><a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></p>
 	<p class="body" style="font-style:normal"><a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a></p>
-	<p cclass="body" style="font-style:normal"><a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a></p>
+	
+	<br>
+	<br>
+
+<p class="body">Submit your email address to join the mailing list:</p>
+	<form action="https://formspree.io/fortomadams@gmail.com" method="POST">
+		<input type="email" name="_replyto">
+  		<input type="submit" value="Send">
+	</form>
 
 	<br>
 	<br>
