--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ img {
 .body {
 	font-size: 12pt;
 	font-family: trebuchet MS;
-	font-style: italic;
+	font-style: normal;
 	color: #362000;
 	text-align: center;
 	margin: 5px;
