--- a/index.html
+++ b/index.html
@@ -114,56 +114,82 @@ img {
 	<p class="title">"on being alone 3ish, or, portrait of the artist 10.18.20.jpg"</p>
 
 <img src="images/10.03.20, or, variation on a theme.jpg" title="October 4, 2020">
+	<p class="title">"10.03.20, or, variation on a theme.jpg"</p>
 
 <img src="images/rain song iii.jpg" title="September 27, 2020">
+	<p class="title">"rain song iii.jpg"</p>
 
 <img src="images/in the desert ii.jpg" title="August 25, 2020">
+	<p class="title">"in the desert ii.jpg"</p>
 
 <img src="images/viewing 8.9.20.jpg" title="August 9, 2020">
+	<p class="title">"viewing 8.9.20.jpg"</p>
 
 <img src="images/rain song ii.jpg" title="August 2, 2020">
+	<p class="title">"rain song ii.jpg"</p>
 
 <img src="images/still life 7.18.20.jpg" title="July 18, 2020">
+	<p class="title">"still life 7.18.20.jpg"</p>
 
 <img src="images/in flight 7.12.20.jpg" title="July 12, 2020">
+	<p class="title">"in flight 7.12.20.jpg"</p>
 
 <img src="images/on sisyphus (midst of deliverance iv).jpg" title="May 31, 2020">
+	<p class="title">"on sisyphus (midst of deliverance iv).jpg"</p>
 
 <img src="images/try 2 hang on.jpg" title="May 23, 2020">
+	<p class="title">"try 2 hang on.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=jHNqs3IYvG0" target="_blank"><img src="images/on being alone.jpg" title="April 22, 2020"></a>
+	<p class="title">"on being alone.jpg"</p>
 
 <img src="images/4.5.20.jpg" title="April 5, 2020">
+	<p class="title">"camelot"</p>
 
 <img src="images/remember how to do this.jpg" title="April 4, 2020">
+	<p class="title">"remember how to do this.jpg"</p>
 
 <img src="images/rain song (midst of deliverance iii).jpg" title="April 3, 2020">
+	<p class="title">"rain song (midst of deliverance iii).jpg"</p>
 
 <img src="images/midst of deliverance ii.jpg" title="March 23, 2020">
+	<p class="title">"midst of deliverance ii.jpg"</p>
 
 <img src="images/until my protector comes (portrait of the artist 3.16.20).jpg" title="March 16, 2020">
+	<p class="title">"midst of deliverance i (portait of the artist .16.20)"</p>
 
 <img src="images/hot tip 19.jpg" title="March 8, 2020">
+	<p class="title">"hot tip 19.jpg"</p>
 
 <img src="images/next thing on my checklist.jpg" title="February 23, 2020">
+	<p class="title">"next thing on my checklist.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=Qr5YPpOV94M" target="_blank"><img src="images/portrait of the artist 2.16.20.jpg" title="February 16, 2020"></a>
+	<p class="title">"portrait of the artist 2.16.20.jpg"</p>
 
 <a href="https://en.wikipedia.org/wiki/Stars_(M._C._Escher)" target="_blank"><img src="images/etsch.jpg" title="February 9, 2020"></a>
+	<p class="title">"etsch.jpg"</p>
 
 <img src="images/pennsylvania polka.jpg" title="February 2, 2020">
+	<p class="title">"pennsylvania polka.jpg"</p>
 
 <img src="images/iii guesses.jpg" title="January 26, 2020">
+	<p class="title">"iii guesses.jpg"</p>
 
 <img src="images/in flight.jpg" title="January 19, 2020">
+	<p class="title">"in flight.jpg"</p>
 
 <a href="https://www.tomspage.org/images/blackstars.jpg" target="_blank"><img src="images/blackstars 2020.jpg" title="January 11, 2020"></a>
+	<p class="title">"blackstars 2020.jpg"</p>
 
 <img src="images/wild%2C or%2C portrait of the artist 1.4.20%2C or%2C high in the custerdome.jpg" title="January 4, 2020">
+	<p class="title">"wild; or, portrait of the artist 1.4.20;</p><p class="title"; style="font-style:italic"> or,</p><p class="title"> high in the custerdome.jpg"</p>
 
 <img src="images/Qn 12.28.19.jpg" title="December 28, 2019">
+	<p class="title">"Qn 12.28.19.jpg"</p>
 
 <a href="https://youtu.be/NUnXxh5U25Y?t=201" target="_blank"><img src="images/falling 12.21.19.jpg" title="December 21, 2019"></a>
+	<p class="title">"falling 12.21.19.jpg"</p>
 
 
 
