--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@ img {
 	<br>
 
 <p class="body">Super special series:</p>
-	<p class="body" style="font-style:normal"><a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a></p>
-	<p class="body" style="font-style:normal"><a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></p>
-	<p class="body" style="font-style:normal"><a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a></p>
+	<p class="body" style="font-style:normal; line-height: 100px;">
+		<a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a>
+		<a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a>
+		<a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a>
+	</p>
 	
 	<br>
 	<br>
