--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ img {
 <img src="images/tomspage.png" class="logo">
 	
 <p class="body"><a href="https://www.tomspage.org">pictures</a>   •   <a href="https://www.tomspage.org/videos">videos</a>   •   <a href="https://www.tomspage.org/songs">songs</a>   •   <a href="https://www.tomspage.org/anagrams">text</a></p>
-<p class="body">by Tom</p>
+<p class="body" style="font-style: italic">by Tom</p>
 	
 	<br>
 	<br>
 
 <p class="body">Super special series:</p>
-	<p class="body" style="font-style:normal; line-height: 100px;">
+	<p class="body" style="font-style:normal; line-height: 25px;">
 		<a href="https://www.tomspage.org/sdso">The Socially Distant Symphony Orchestra</a><br>
 		<a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a><br>
 		<a href="https://www.tomspage.org/midst">Midst of Deliverance: The Coronavirus Pandemic</a>
@@ -185,7 +185,7 @@ img {
 	<p class="title">"blackstars 2020.jpg"</p>
 
 <img src="images/wild%2C or%2C portrait of the artist 1.4.20%2C or%2C high in the custerdome.jpg" title="January 4, 2020">
-	<p class="title">"wild; or, portrait of the artist 1.4.20;</p><p class="title"; style="font-style:italic"> or,</p><p class="title"> high in the custerdome.jpg"</p>
+	<p class="title">"wild; or, portrait of the artist 1.4.20; or, high in the custerdome.jpg"</p>
 
 <img src="images/Qn 12.28.19.jpg" title="December 28, 2019">
 	<p class="title">"Qn 12.28.19.jpg"</p>
@@ -349,33 +349,88 @@ img {
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
 <img src="images/fertile desert 9.30.19.jpg" title="September 30, 2019">
+	<p class="title">"fertile desert 9.30.19.jpg"</p>
+
 <img src="images/the wheel ii.jpg" title="September 29, 2019">
+	<p class="title">"the wheel ii.jpg"</p>
+
 <a href="https://youtu.be/s_0eLeALqqc" target="_blank"><img src="images/the wheel.jpg" title="September 27, 2019"></a>
+	<p class="title">"the wheel.jpg"</p>
+
 <a href="http://watchout4snakes.com/wo4snakes/Random/RandomWord" target="_blank"><img src="images/finders.jpg" title="September 26, 2019"></a>
+	<p class="title">"<a href="http://watchout4snakes.com/wo4snakes/Random/RandomWord" target="_blank">finders</a>"</p>
+
 <a href="https://www.youtube.com/watch?v=QzAJqKll6hI" target="_blank"><img src="images/caravan ad infinitum.jpg" title="September 25, 2019"></a>
+	<p class="title">"caravan ad infinitum.jpg"</p>
+
 <img src="images/throw out your gold teeth.jpg" title="September 24, 2019">
+	<p class="title">"throw out your gold teeth.jpg"</p>
+
 <img src="images/dear diary 9.23.19.jpg" title="September 23, 2019">
+	<p class="title">"dear diary 9.23.19.jpg"</p>
+
 <img src="images/transmission 9.22.19.jpg" title="September 22, 2019">
+	<p class="title">"transmission 9.22.19.jpg"</p>
+
 <img src="images/9.21.19.jpg" title="September 21, 2019">
+	<p class="title">"9.21.19.jpg"</p>
+
 <img src="images/sweet dreams%3B flying machines.jpg" title="September 20, 2019">
-<img src="images/forecast 9.19.19.jpg" title="September 19, 2019">
+	<p class="title">"sweet dreams, flying machines.jpg"</p>
+
+<img src="images/forecast 9.19.19.jpg" title="September 19, 2019">	
+	<p class="title">"forecast 9.19.19.jpg"</p>
+
 <a href="https://www.tomspage.org/images/hot tips 1%2D16.jpg" target="_blank"><img src="images/hot tip 16.jpg" title="September 18, 2019"></a>
+	<p class="title">"hot tip 16.jpg"</p>
+
 <img src="images/road 9.17.19%2C or%2C a thesis on the resilience of the quixotic.jpg" title="September 17, 2019">
+	<p class="title">"road 9.17.19; or, a thesis on the resilience of the quixotic.jpg"</p>
+
 <img src="images/rise up.jpg" title="September 15, 2019">
+	<p class="title">"rise up.jpg"</p>
+
 <img src="images/the occasional hubris %28portrait of the artist 9.14.19%29.jpg" title="September 14, 2019">
+	<p class="title">"the occasional hubris (portrait of the artist 9.14.19).jpg"</p>
+
 <img src="images/big shot.jpg" title="September 13, 2019">
+	<p class="title">"big shot.jpg"</p>
+
 <img src="images/summation 9.12.19.jpg" title="September 12, 2019">
+	<p class="title">"summation 9.12.19.jpg"</p>
+
 <img src="images/blind forces iii.jpg" title="September 11, 2019">
+	<p class="title">"blind forces iii"</p>
+
 <img src="images/midst of deliverance %28portrait of the artist 9.10.19%29.jpg" title="September 10, 2019">
+	<p class="title">"portrait of the artist 9.10.19"</p>
+
 <a href="https://upload.wikimedia.org/wikipedia/commons/4/40/Gustave_Dor%C3%A9_-_Miguel_de_Cervantes_-_Don_Quixote_-_Part_1_-_Chapter_1_-_Plate_1_%22A_world_of_disorderly_notions%2C_picked_out_of_his_books%2C_crowded_into_his_imagination%22.jpg" target="_blank"><img src="images/practical tactical brilliance.jpg" title="September 9, 2019"></a>
+	<p class="title">"practical tactical brilliance.jpg"</p>
+
 <img src="images/free%21 free%3F free%21%21%21.jpg" title="September 8, 2019">
+	<p class="title">"free? free?? free!!!.jpg"</p>
+
 <img src="images/SHALL WE ALL BE HEALED.jpg" title="September 7, 2019">
+	<p class="title">"SHALL WE ALL BE HEALED.jpg"</p>
+
 <img src="images/timestream.jpg" title="September 6, 2019">
+	<p class="title">"timestream.jpg"</p>
+
 <img src="images/blind forces II.jpg" title="September 5, 2019 | ''Nature contains that which does not concern us, and has no intention of taking us into its confidence''">
+	<p class="title">"blind forces ii.jpg"</p>
+
 <img src="images/every night and day.jpg" title="September 4, 2019">
+	<p class="title">"night and day.jpg"</p>
+
 <a href="https://www.youtube.com/watch?v=YG2CvsUzT-U" target="_blank"><img src="images/we shall all be healed %28portrait of the artist 9.3.19%29.jpg" title="September 3, 2019"></a>
+	<p class="title">"portrait of the artist 9.3.19.jpg"</p>
+
 <a href="https://upload.wikimedia.org/wikipedia/commons/0/05/Puck_cover2.jpg" target="_blank"><img src="images/what fools these.jpg" title="September 2, 2019 | What fools these mortals be!"></a>
+	<p class="title">"<a href="https://upload.wikimedia.org/wikipedia/commons/0/05/Puck_cover2.jpg" target="_blank">what fools these</a>"</p>
+
 <a href="https://www.youtube.com/watch?v=EPIaw-MgNzM" target="_blank"><img src="images/portrait of the artist 9.1.19.jpg" title="September 1, 2019"></a>
+	<p class="title">"portrait of the artist 9.1.19.jpg"</p>
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
 
