--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ img {
 	<br>
 
 <img src="images/in the desert iii (portrait of the artist 7.7.21).jpg" title="July 7, 2021">
-	<p class="title">"in the desert iii (portait of the artist 7.7.21"</p>
+	<p class="title">"in the desert iii (portait of the artist 7.7.21).jpg"</p>
 
 <img src="images/midst of deliverance ix.jpg" title="June 26, 2021">
 	<p class="title">"midst of deliverance ix.jpg"</p>
