--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ img {
 	font-family:garamond;
 	color:gray;
 	text-align: center;
+	font-style: bold;
+	font-style: italic;
 }
 .title {
 	font-size: 12pt;
@@ -195,8 +197,8 @@ img {
 
 
 
-<p class="header">––––    November 2019    ––––</p></br>
-<a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></i></p>
+<p class="header">––––    November 2019    ––––</p>
+<p class="header"><a href="https://www.tomspage.org/americanexperiment">American Experiment: The Amendments to the Constitution</a></p>
 
 <img src="images/portrait%20of%20the%20artist's%20countrymen%20(amendment 1).jpg" title="November 1, 2019 | AMENDMENT I: Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the government for a redress of grievances.">
 	<p class="title">"portrait of the artist's countrymen.jpg" (First Amendment)</p>
@@ -281,7 +283,8 @@ img {
 
 
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    October 2019    ––––</i></p>
+
+<p class="header">––––    October 2019    ––––</p>
 
 <img src="images/dia.jpg" title="October 22, 2019">
 	<p class="title">"dia.jpg"</p>
@@ -345,6 +348,9 @@ img {
 
 <img src="images/portrait of the artist 10.1.19.jpg" title="October 1, 2019">
 	<p class="title">"portrait of the artist 10.1.19.jpg"</p>
+
+
+
 
 <p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    September 2019    ––––</i></p>
 
@@ -432,7 +438,10 @@ img {
 <a href="https://www.youtube.com/watch?v=EPIaw-MgNzM" target="_blank"><img src="images/portrait of the artist 9.1.19.jpg" title="September 1, 2019"></a>
 	<p class="title">"portrait of the artist 9.1.19.jpg"</p>
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    August 2019    ––––</i></p>
+
+
+
+<p class="header">––––    August 2019    ––––</p>
 
 <img src="images/wisdom of The Elders.jpg" title="August 31, 2019">
 	<p class="title">"wisdom of The Elders.jpg"</p>
@@ -471,7 +480,7 @@ img {
 	<p class="title">"so it goes.jpg"</p>
 
 <img src="images/hot tip 15.jpg" title="August 16, 2019 (released August 17)">
-		<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 15.jpg</a>"</p>
+	<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 15.jpg</a>"</p>
 
 <img src="images/brunelleschi dreams of stars.jpg" title="August 16, 2019">
 	<p class="title">"brunelleschi dreams of stars.jpg"</p>
@@ -521,83 +530,87 @@ img {
 <img src="images/portrait of the artist 8.1.19.jpg" title="August 1, 2019">
 	<p class="title">"portrait of the artist 8.1.19.jpg"</p>
 
+	
+	
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    July 2019    ––––</i></p>
+<p class="header">––––    July 2019    ––––</p>
 
 <a href="https://www.instagram.com/_tomspage" target="_blank"><img src="images/hot tip 14.jpg" title="July 25, 2019 | 300 posts on Instagram!"></a>
 	<p class="title">"<a href="https://www.tomspage.org/hottip/" target="_blank">hot tip 14.jpg</a>"</p>
 
 <img src="images/portrait of the artist 7.24.19.jpg" title="July 24, 2019">
-	<p class="title">.</p>
+	<p class="title">"portrait of the artist 7.24.19</p>
 
 <a href="https://www.youtube.com/watch?v=FvQkJQyEEEk" target="_blank"><img src="images/4 me.jpg" title="July 23, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"4 me.jpg" (<a href="https://www.youtube.com/watch?v=FvQkJQyEEEk" target="_blank">⏱️</a>)</p>
 
 <img src="images/viral 2.jpg" title="July 22, 2019">
-	<p class="title">.</p>
+	<p class="title">"viral.jpg"</p>
 
 <img src="images/graceful.jpg" title="July 21, 2019">
-	<p class="title">.</p>
+	<p class="title">"graceful.jpg"</p>
 
 <img src="images/giant leap.jpg" title="July 20, 1969">
-	<p class="title">.</p>
+	<p class="title">giant leap.jpg</p>
 
 <a href="https://www.youtube.com/watch?v=NkefglL9c4c&t=7m12s" target="_blank"><img src="images/knowledge %28power%29.jpg" title="July 19, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"knowledge (power).jpg"</p>
 
 <img src="images/deer reader 2.jpg" title="July 18, 2019">
-	<p class="title">.</p>
+	<p class="title">"deer reader.jpg"</p>
 
 <img src="images/no pressure at all.jpg" title="July 17, 2019">
-	<p class="title">.</p>
+	<p class="title">"no pressure at all.jpg"</p>
 
 <img src="images/have a nice fall.jpg" title="July 16, 2019">
-	<p class="title">.</p>
+	<p class="title">"have a nice fall.jpg"</p>
 
 <img src="images/and think about what you%27ve done.jpg" title="July 15, 2019">
-	<p class="title">.</p>
+	<p class="title">"and think about what you've done.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=qHbsdxqWYQs" target="_blank"><img src="images/young caesar.jpg" title="July 14, 2019 | Get along, Kid Charlemagne!"></a>
-	<p class="title">.</p>
+	<p class="title">"young caesar.jpg"</p>
 
 <img src="images/da da.jpg" title="July 13, 2019">
-	<p class="title">.</p>
+	<p class="title">"da da.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=VhinPd5RRJw&feature=youtu.be&t=219" target="_blank"><img src="images/burr shot first.jpg" title="July 12, 1804"></a>
-	<p class="title">.</p>
+	<p class="title">"burr shot first.jpg"</p>
 
 <img src="images/quaint.jpg" title="July 11, 2019">
-	<p class="title">.</p>
+	<p class="title">"quaint.jpg"</p>
 
 <a href="https://www.tomspage.org/images/tempest.jpg" target="_blank"><img src="images/temperate.jpg" title="July 10, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"temperate.jpg"</p>
 
 <img src="images/about.jpg" title="July 9, 2019">
-	<p class="title">.</p>
+	<p class="title">"about.jpg"</p>
 
 <img src="images/glamor.jpg" title="July 8, 2019">
-	<p class="title">.</p>
+	<p class="title">"glamor.jpg"</p>
 
 <a href="https://www.tomspage.org/images/goose%201.jpg" target="_blank"><img src="images/here%27s to the cumulative power of one day at a time.jpg" title="July 6, 2019 | Six months of the email chain!"></a>
-	<p class="title">.</p>
+	<p class="title">"here's to the cumulative power of one day at a time.jpg"</p>
 
 <img src="images/petty pace.jpg" title="July 5, 2019">
-	<p class="title">.</p>
+	<p class="title">"pace.jpg"</p>
 
 <a href="https://www.tomspage.org/images/deformation.jpg" target="_blank"><img src="images/declaration.jpg" title="July 4, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"declaration.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=_HRgm2tZc-A" target="_blank"><img src="images/tight%21%21.jpg" title="July 3, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"tight!!.jpg"</p>
 
 <a href="https://www.youtube.com/watch?v=y9OMmH2pNfQ" target="_blank"><img src="images/one mississippi.jpg" title="July 2, 2019"></a>
-	<p class="title">.</p>
+	<p class="title">"one mississippi.jpg"</p>
 
 <img src="images/portrait of the artist 7.1.19.jpg" title="July 1, 2019">
-	<p class="title">.</p>
+	<p class="title">"portrait of the artist 7.1.19.jpg"</p>
+
+	
 
 
-<p style="font-size:14pt;font-family:garamond;color:gray;text-align:center;"><i>––––    June 2019    ––––</i></p>
+<p class="header">––––    June 2019    ––––</p>
 
 <a href="https://www.tomspage.org/images/colossus.jpg" target="_blank"><img src="images/old lady.jpg" title="June 30, 2019"></a>
 	<p class="title">.</p>
